feat: Update cd.yml to abstract project name

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -69,15 +69,15 @@ jobs:
 
           echo "=== Testing wheel file ==="
           # Install wheel to get dependencies and check import
-          python -m pip install --extra-index-url https://test.pypi.org/simple --upgrade --pre caustics
-          python -c "import caustics; print(caustics.__version__); caustics.test()"
+          python -m pip install --extra-index-url https://test.pypi.org/simple --upgrade --pre project-name-goes-here
+          python -c "import project-name-goes-here; print(project-name-goes-here.__version__); project-name-goes-here.test()"
           echo "=== Done testing wheel file ==="
 
           echo "=== Testing source tar file ==="
           # Install tar gz and check import
-          python -m pip uninstall --yes caustics
-          python -m pip install --extra-index-url https://test.pypi.org/simple --upgrade --pre --no-binary=:all: caustics
-          python -c "import caustics; print(caustics.__version__); caustics.test()"
+          python -m pip uninstall --yes project-name-goes-here
+          python -m pip install --extra-index-url https://test.pypi.org/simple --upgrade --pre --no-binary=:all: project-name-goes-here
+          python -c "import project-name-goes-here; print(project-name-goes-here.__version__); project-name-goes-here.test()"
           echo "=== Done testing source tar file ==="
 
   publish:
