--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,24 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
 {
 	"image":"ghcr.io/swarm-io-external/py-data-science:latest",
 
 	"customizations": {
-		"vscode": {
-		  "extensions": [
-			"ms-toolsai.jupyter",
-			"ms-python.python",
-			"ms-vsliveshare.vsliveshare"
-		]
-		}
-	},
-	"postCreateCommand": "sh .devcontainer/post_create.sh"
+      		"vscode": {
+        		"extensions": [
+          			"ms-toolsai.jupyter",
+          			"ms-python.python",
+          			"ms-vsliveshare.vsliveshare",
+          			"DavidAnson.vscode-markdownlint",
+          			"GitHub.copilot"
+        		]
+      		}
+    	},
+    	"postCreateCommand": "sh .devcontainer/postBuild.sh",
+    	"features": {
+	      "ghcr.io/devcontainers-contrib/features/black:2": {},
+	      "ghcr.io/devcontainers-contrib/features/pylint:2": {},
+	      "ghcr.io/devcontainers/features/git:1": {},
+	      "ghcr.io/devcontainers-contrib/features/curl-apt-get:1": {},
+	      "ghcr.io/devcontainers-contrib/features/ncdu:1": {},
+	      "ghcr.io/devcontainers-contrib/features/wget-apt-get:1": {}
+    	}
 }
